[package]
name = "demo"
version = "0.1.0"
edition = "2024"
description = "Interactive desktop application that wires the simulation, renderer, and kinetics together"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
# Workspace crates
fluidsim = { path = "../fluidsim" }
renderer = { path = "../renderer" }
kinetics = { path = "../kinetics" }

# Windowing / GPU / GUI
winit.workspace = true
ash.workspace = true
egui.workspace = true
raw-window-handle.workspace = true

# CLI + logging
clap.workspace = true
log.workspace = true
env_logger.workspace = true

# Math / diagnostics
glam.workspace = true
anyhow.workspace = true
